--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
     "format": "prettier --write './**/*.{js,jsx,ts,tsx,css,md,json}' --config ./.prettierrc"
   },
   "dependencies": {
+    "axios": "^0.21.1",
     "next": "10.2.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-query": "^3.17.0",
     "styled-components": "^5.3.0"
   },
   "devDependencies": {
